creating classes for mokepons

--- a/mokepon.html
+++ b/mokepon.html
@@ -20,25 +20,25 @@
 
         <div class="tarjetas">
             <!--con div creo una separacion del recuadro padre donde Creo las opciones de mokepones disponibles-->
-            <input type="radio" name="mascota" id="Hipodogue" />
-            <label class="tarjeta-de-mokepon" for="Hipodogue">
+            <input type="radio" name="mascota" id="hipodoge" />
+            <label class="tarjeta-de-mokepon" for="hipodoge">
                 <!--Creo las opciones de mokepones disponibles, con el for permito que al presionar el texto tambein aplique al input, la clase me permite odificar este elemento con css-->
-                <p>Hipodogue</p>
-                <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="Hipodogue">
+                <p>Hipodoge</p>
+                <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="hipodoge">
                 <!--Agrego la imagen y el texto alternativo por si no carga-->
             </label>
             <!--elemento de seleccion de tipo radio-->
 
-            <input type="radio" name="mascota" id="Capipepo" />
-            <label class="tarjeta-de-mokepon" for="Capipepo">
+            <input type="radio" name="mascota" id="capipepo" />
+            <label class="tarjeta-de-mokepon" for="capipepo">
                 <p>Capipepo</p>
-                <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="Capipepo">
+                <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="capipepo">
             </label>
 
-            <input type="radio" name="mascota" id="Ratigueya" />
-            <label class="tarjeta-de-mokepon" for="Ratigueya">
+            <input type="radio" name="mascota" id="ratigueya" />
+            <label class="tarjeta-de-mokepon" for="ratigueya">
                 <p>Ratigueya</p>
-                <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="Ratigueya">
+                <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="ratigueya">
             </label>
         </div>
 
@@ -82,4 +82,4 @@
     <script src="./js/mokepon.js"></script>
 </body>
 
-</html> 
+</html>
