--- a/mokepon.html
+++ b/mokepon.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOKEPON</title>
-    <!--se crea el link al codigo de js creado-->
     <link rel="stylesheet" href="./styles.css">
     <!--se crea el link al codigo de css creado-->
 </head>
@@ -18,28 +15,8 @@
 
         <h2 class="subtitulo">elige a tu mascota:</h2>
 
-        <div class="tarjetas">
-            <!--con div creo una separacion del recuadro padre donde Creo las opciones de mokepones disponibles-->
-            <input type="radio" name="mascota" id="hipodoge" />
-            <label class="tarjeta-de-mokepon" for="hipodoge">
-                <!--Creo las opciones de mokepones disponibles, con el for permito que al presionar el texto tambein aplique al input, la clase me permite odificar este elemento con css-->
-                <p>Hipodoge</p>
-                <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="hipodoge">
-                <!--Agrego la imagen y el texto alternativo por si no carga-->
-            </label>
-            <!--elemento de seleccion de tipo radio-->
+        <div id="contenedorTarjetas" class="tarjetas">
 
-            <input type="radio" name="mascota" id="capipepo" />
-            <label class="tarjeta-de-mokepon" for="capipepo">
-                <p>Capipepo</p>
-                <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="capipepo">
-            </label>
-
-            <input type="radio" name="mascota" id="ratigueya" />
-            <label class="tarjeta-de-mokepon" for="ratigueya">
-                <p>Ratigueya</p>
-                <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="ratigueya">
-            </label>
         </div>
 
         <button id="boton-mascota">seleccionar</button>
@@ -80,6 +57,7 @@
         </div>
     </section>
     <script src="./js/mokepon.js"></script>
+    <!--se crea el link al codigo de js creado-->
 </body>
 
 </html>
