--- a/mokepon.html
+++ b/mokepon.html
@@ -29,11 +29,7 @@
 
         <h2 class="subtitulo">elige tu ataque:</h2>
 
-        <div class="tarjetasAtaques">
-            <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
-            <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
-            <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
-        </div>
+        <div id="contenedorAtaques" class="tarjetasAtaques"></div>
 
         <div id="mensajes">
             <p id="resultado">Mucha Suerte!</p>
