--- a/mokepon.html
+++ b/mokepon.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOKEPON</title>
     <link rel="stylesheet" href="./styles.css">
     <!--se crea el link al codigo de css creado-->
@@ -25,13 +26,15 @@
 
     <section id="verMapa">
 
-        <h1 class="titulo">Recorre el mapa con tu Mokepon!</h1>
+        <h2 class="subtitulo">Recorre el mapa con tu Mokepon!</h2>
         <canvas id="mapa"></canvas>
         <!--creo un boton con una funcion integrada al hacer click, corre en el JS-->
-        <button onmouseup="detenerMovimiento()" onmousedown ="moverArr()">Arriba</button>
-        <button onmouseup="detenerMovimiento()" onmousedown ="moverAba()">Abajo</button>
-        <button onmouseup="detenerMovimiento()" onmousedown ="moverIzq()">Izquierda</button>
-        <button onmouseup="detenerMovimiento()" onmousedown ="moverDer()">Derecha</button>
+        <button onmouseup="detenerMovimiento()" onmousedown="moverArr()">Arriba</button>
+        <div>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverIzq()">Izquierda</button>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverAba()">Abajo</button>
+            <button onmouseup="detenerMovimiento()" onmousedown="moverDer()">Derecha</button>
+        </div>
 
     </section>
 
